# 2d-engine

./: CMakeLists.txt  README.md  glad.c  main.cpp
include/: shader.h
include/glad/: glad.h
src/: shader.cpp
